--- a/client/styles/base/_fonts.scss
+++ b/client/styles/base/_fonts.scss
@@ -5,21 +5,21 @@
 
 @font-face {
     font-family: 'Sen';
-    src: url(../fonts/Sen/Sen-Regular.ttf) format("truetype");
+    src: url(../fonts/Sen-Regular.ttf) format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Sen';
-    src: url(../fonts/Sen/Sen-Bold.ttf) format("truetype");
+    src: url(../fonts/Sen-Bold.ttf) format("truetype");
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Sen';
-    src: url(../fonts/Sen/Sen-Extrabold.ttf) format("truetype");
+    src: url(../fonts/Sen-Extrabold.ttf) format("truetype");
     font-weight: 700;
     font-style: normal;
 }
