Adds order and orders cards directives

--- a/client/scripts/orders/views/orders.html
+++ b/client/scripts/orders/views/orders.html
@@ -19,7 +19,7 @@
 		<ion-refresher pulling-text="{{ 'pullToRefresh' | translate }}" on-refresh="onReload()">
 		</ion-refresher>
 		<div ng-repeat="order in orders">
-			<orders-card order="order"></orders-card>
+			<ge-orders-card order="order"></ge-orders-card>
 			&nbsp
 		</div>
 	</ion-content>
