--- a/client/scripts/orders/views/group-orders.html
+++ b/client/scripts/orders/views/group-orders.html
@@ -30,7 +30,7 @@
     <div class="orders" ng-class="{'single-order' : groupOrders.length == 1}">
       <slick data="groupOrders" ng-if="groupOrders.length" init-onload="true" arrows="false" slides-to-show="1" slides-to-scroll="1" center-mode="{{groupOrders.length == 1 ? false : true}}" center-padding="20px" >
         <div ng-repeat="groupOrder in groupOrders track by $index">
-          <div class="order-card" order-card on-tap="onJoinOrderTouch(groupOrder)" >
+          <div class="order-card" ge-order-card on-tap="onJoinOrderTouch(groupOrder)" >
             <div class="top" ng-style="{'background-image' : 'url(' + groupOrder.restaurant.data.pictureUrl + ')'}">
               <h3>-{{groupOrder.discountRate}}<span>%</span></h3>
               <div class="time-left">
