--- a/client/scripts/restaurant/views/restaurant-menu.html
+++ b/client/scripts/restaurant/views/restaurant-menu.html
@@ -69,6 +69,9 @@
               </ul>
             </div>
           </div>
+          <div ng-if="isProductSelected(product)" class="pull-right">
+            <span class="gp-icon gp-pizza selected-product-icon"></span>
+          </div>
           <div class="col-95">
             <p ng-show="product.isShown">{{product.description}}</p>
           </div>
