Adds receipt card

--- a/client/scripts/orders/views/cart.html
+++ b/client/scripts/orders/views/cart.html
@@ -9,7 +9,8 @@
           <h3>{{ 'yummy' | translate }} !</h3>
           <p>{{ 'orderSaved' | translate }} !</p>
         </div>
-        <receipt-card comment="comment.value" orders="cart" restaurant="restaurant" discount="currentDiscount"></receipt-card>
+        <ge-receipt-card comment="comment.value" orders="cart" restaurant="restaurant" discount="currentDiscount">
+        </ge-receipt-card>
       </div>
     </ion-slide>
     <ion-slide class="bg-orange">
