Display restaurant capacity inline

--- a/client/styles/components/_order-card.scss
+++ b/client/styles/components/_order-card.scss
@@ -88,7 +88,7 @@
       ul {
         margin-top: 10px;
         li {
-          display: block;
+          display: inline-block;
           text-align: center;
           span {
             font-size: 25px;
