Hides pizza icons for restaurants whose capacity exceeds 10 pizzas

--- a/client/scripts/orders/views/group-orders.html
+++ b/client/scripts/orders/views/group-orders.html
@@ -51,7 +51,7 @@
                   {{ 'remainingCapacity' | translate }} <b>{{groupOrder.remainingCapacity}}</b>
                 </h4>
                 <div class="clearfix">
-                  <ul>
+                  <ul ng-if="groupOrder.restaurant.data.deliveryCapacity <= 10">
                     <li ng-repeat="i in setArrayFromInt(groupOrder.remainingCapacity) track by $index">
                       <span class="gp-icon gp-pizza filled"></span>
                     </li>
