--- a/client/scripts/settings/views/settings.html
+++ b/client/scripts/settings/views/settings.html
@@ -14,7 +14,7 @@
     </button>
   </div>
 
-  <ion-content class="has-subheader">
+  <ion-content class="has-subheader" overflow-scroll="false">
     <ion-slide-box show-pager="false">
       <ion-slide ng-repeat="tab in tabs">
         <ng-include src="tab.url"/>
