remove remaining capacity from app

--- a/client/scripts/restaurant/views/restaurant-menu.html
+++ b/client/scripts/restaurant/views/restaurant-menu.html
@@ -13,9 +13,8 @@
   <!-- - - - - - - - - - - - - - - - - - - NAV BAR - - - - - - - - - - - - - - - - - -->
   <ion-nav-bar class="bar-blue">
   <ion-nav-title>
-    <div class="title has-sub-title">
+    <div class="title">
       {{ restaurant.name }}
-      <small>{{currentOrder.remainingCapacity - cart.getTotalQuantity()}} {{'pizzasLeft' | translate }}</small>
     </div>
   </ion-nav-title>
     <ion-nav-buttons side="primary">
