change pizza icon to groupeat icon when user select a production in restaurant menu view

--- a/client/scripts/restaurant/views/restaurant-menu.html
+++ b/client/scripts/restaurant/views/restaurant-menu.html
@@ -68,7 +68,7 @@
               </ul>
             </div>
             <div ng-if="isProductSelected(product)" class="pull-right">
-              <span class="gp-icon gp-pizza selected-product-icon"></span>
+              <span class="gp-icon gp-groupeat selected-product-icon"></span>
             </div>
           </div>
           <div class="col-95">
