Remove most references to pizzas

--- a/client/scripts/restaurant/views/restaurant-menu.html
+++ b/client/scripts/restaurant/views/restaurant-menu.html
@@ -38,7 +38,7 @@
         <div class="content" id="discount-placeholder-content">
           <div class="discount" ng-hide="isNewOrder.value">
             <h4>-{{ currentOrder.currentDiscount | number : 0 }}<small>%</small></h4>
-            <p class="small-title">Discount sur toutes les Pizzas</p>
+            <p class="small-title">{{ 'discountOnAllProduct' | translate }}</p>
           </div>
           <div class="food-rush" ng-show="isNewOrder.value">
             <h3 class="time-value">{{foodRushTime.value}}:00</h3>
