Improve order price display

--- a/client/scripts/restaurant/views/restaurant-menu.html
+++ b/client/scripts/restaurant/views/restaurant-menu.html
@@ -124,7 +124,7 @@
       <div class="col">
         <div class="summup">
           <div class="clearfix">
-            <div>
+            <div class="pull-right">
               <strike ng-show="isDiscountToShow()" class="color-red">{{ cart.getTotalPrice() | number : 2 }}€</strike> <b>{{ cart.getTotalPrice()*(100 - currentOrder.currentDiscount)/100 | number : 2}}</b>€
             </div>
           </div>
