--- a/client/styles/components/_summup-order.scss
+++ b/client/styles/components/_summup-order.scss
@@ -5,9 +5,10 @@
 		height: 70px;
 		line-height: 70px;
 		padding: 0 15px;
-		font-size: 13px;
+		font-size: 22px;
+		color: $green;
 		strike {
-			font-size: 10px;
+			font-size: 16px;
 		}
 	}
 }
