--- a/client/scripts/restaurant/views/restaurants.html
+++ b/client/scripts/restaurant/views/restaurants.html
@@ -18,8 +18,7 @@
 		</ion-nav-buttons>
 		<ion-nav-title>
 			<div class="title has-sub-title">
-				{{ 'restaurants' | translate }}
-				<small>{{restaurants.length}}&nbsp;<ng-pluralize count="restaurants.length" when="{'0': 'restaurant', '1': 'restaurant', 'other': 'restaurants'}"></ng-pluralize>&nbsp;{{ 'aroundYou' | translate }}</small>
+				<ge-delivery-address></ge-delivery-address>
 			</div>
 		</ion-nav-title>
 	</ion-nav-bar>
