Allow any email address to login and register

--- a/client/scripts/customer/views/customer-authentication.html
+++ b/client/scripts/customer/views/customer-authentication.html
@@ -30,7 +30,7 @@
 						<form name="form" ng-submit="submitForm(form, registering);" ng-submit-force="true" novalidate>
 							<div class="group-input group-two">
 								<div class="input">
-									<input name="email" type="email" placeholder="{{ 'email' | translate }}" ng-model="user.email" required ge-campus-email>
+									<input name="email" type="email" placeholder="{{ 'email' | translate }}" ng-model="user.email" required>
 								</div>
 								<div class="input">
 									<input name="password" type="password" placeholder="{{ 'password' | translate }}" ng-model="user.password" required ng-minlength="6">
