Show restaurants and group orders around you

--- a/client/scripts/restaurant/views/restaurants.html
+++ b/client/scripts/restaurant/views/restaurants.html
@@ -19,6 +19,7 @@
 		<ion-nav-title>
 			<div class="title has-sub-title">
 				<ge-delivery-address></ge-delivery-address>
+        <small>{{restaurants.length}}&nbsp;<ng-pluralize count="restaurants.length" when="{'0': 'restaurant', '1': 'restaurant', 'other': 'restaurants'}"></ng-pluralize>&nbsp;{{ 'aroundYou' | translate}}</small>
 			</div>
 		</ion-nav-title>
 	</ion-nav-bar>
