--- a/client/scripts/orders/views/group-orders.html
+++ b/client/scripts/orders/views/group-orders.html
@@ -15,7 +15,10 @@
       <button class="button button-icon icon ion-ios-gear" ui-sref="app.settings"></button>
     </ion-nav-buttons>
     <ion-nav-title>
-      <ge-delivery-address></ge-delivery-address>
+      <div class="title has-sub-title">
+        <ge-delivery-address></ge-delivery-address>
+        <small>{{groupOrders.length}}&nbsp;<ng-pluralize count="groupOrders.length" when="{'0': 'commande', '1': 'commande', 'other': 'commandes'}"></ng-pluralize>&nbsp;{{ 'aroundYou' | translate}}</small>
+      </div>
     </ion-nav-title>
     <ion-nav-buttons side="secondary" >
       <button class="button button-icon icon ion-bag" ui-sref="app.orders"></button>
