Save on storage the forward geocoded address when clicking on it

--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -3,6 +3,6 @@
     <button on-tap="modal.hide()" class="button button-icon icon ion-ios-close-empty button-back"></button>
   </ion-header-bar>
   <ion-content>
-    <ge-address-picker modal="modal"></ge-address-picker>
+    <ge-address-picker on-address-select="onAddressSelect()"></ge-address-picker>
   </ion-content>
 </ion-modal-view>
