--- a/client/styles/pages/_authentication.scss
+++ b/client/styles/pages/_authentication.scss
@@ -114,105 +114,11 @@
 	}
 }
 
-.progress {
+.signup-logo-container {
 	position: absolute;
 	width: 80%;
-	top: 70px;
+	top: 10px;
 	left: 10%;
-	.groupin {
-		position: absolute;
-		top: -45px;
-		left: -13px;
-		width: 100%;
-		transition: all 0.55s cubic-bezier(0.25, 0.8, 0.25, 1);
-		img {
-			max-height: 35px;
-		}
-	}
-	.progress-bar {
-		display: block;
-		position: relative;
-		height: 3px;
-		.progress-track {
-			height: 3px;
-			background-color: $bg-light;
-			overflow: hidden;
-			position: relative;
-			&:before {
-				content: "";
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-color: $green;
-				transition: all 0.55s cubic-bezier(0.25, 0.8, 0.25, 1);
-				transform: translate3d(-100%, 0, 0);
-			}
-		}
-		span {
-			position: absolute;
-			display: block;
-			width: 8px;
-			z-index: 10;
-			height: 8px;
-			background-color: $border-light;
-			border-radius: 100%;
-			transition: all 0.55s cubic-bezier(0.25, 0.8, 0.25, 1) .3s;
-			top: 50%;
-			margin-top: -5px;
-			&:nth-of-type(1) {
-				left: -4px;
-			}
-			&:nth-of-type(2) {
-				left: 50%;
-				margin-left: -4px;
-			}
-			&:nth-of-type(3) {
-				right: -4px;
-			}
-			&.active {
-				background-color: $green;
-			}
-		}
-	}
-	&.is-slide-2 {
-		.progress-track {
-			&:before {
-				transform: translate3d(-50%, 0, 0);
-			}
-		}
-		.groupin {
-			transform: translate3d(50%, 0, 0);
-		}
-	}
-	&.is-slide-3 {
-		.progress-track {
-			&:before {
-				transform: translate3d(0, 0, 0);
-			}
-		}
-		.groupin {
-			transform: translate3d(100%, 0, 0);
-		}
-	}
-}
-
-.later {
-	position: absolute;
-	bottom: 30px;
-	left: 10%;
-	width: 80%;
-	a {
-		color: darken($border-light, 10%);
-		font-size: 14px;
-	}
-	text-align: center;
-	transition: all 0.55s cubic-bezier(0.25, 0.8, 0.25, 1) .3s;
-	&.is-hidden {
-		opacity: 0;
-		pointer-events: none;
-	}
 }
 
 @media (max-width: 350px) {
@@ -232,11 +138,6 @@
     			margin-top: 40px;
     			margin-bottom: 0;
 			}
-		}
-	}
-	.later {
-		a {
-			font-size: 11px;
 		}
 	}
 }
