--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -1,6 +1,8 @@
 <ion-modal-view>
   <ion-header-bar class='bar-transparent'>
-    <button on-tap="modal.hide()" class="button button-icon icon ion-ios-close-empty button-back"></button>
+    <button on-tap="modal.hide()" class="button button-icon">
+      <i class="icon ion-ios-close-empty"></i>
+    </button>
   </ion-header-bar>
   <ion-content>
     <ge-address-picker on-address-select="onAddressSelect()"></ge-address-picker>
