Load group orders based on address and not geolocation

--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -5,6 +5,6 @@
     </button>
   </ion-header-bar>
   <ion-content>
-    <ge-address-picker on-address-select="onAddressSelect()"></ge-address-picker>
+    <ge-address-picker on-address-select="selectAddress()"></ge-address-picker>
   </ion-content>
 </ion-modal-view>
