Load restaurants based on address and not geolocation

--- a/client/scripts/restaurant/views/restaurants.html
+++ b/client/scripts/restaurant/views/restaurants.html
@@ -17,7 +17,7 @@
 			</button>
 		</ion-nav-buttons>
 		<ion-nav-title>
-			<ge-delivery-address></ge-delivery-address>
+			<ge-delivery-address on-address-select="onReload()"></ge-delivery-address>
 		</ion-nav-title>
 	</ion-nav-bar>
 
