Add padding for address field

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -24,6 +24,7 @@
 /**
  * COMPONENTS
  */
+@import "components/address-picker";
 @import "components/animations";
 @import "components/backgrounds";
 @import "components/buttons";
