--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -1,7 +1,10 @@
 <ion-modal-view>
   <ion-header-bar class='bar-transparent'>
-    <button on-tap="modal.hide()" class="button button-icon">
-      <i class="icon ion-ios-close-empty"></i>
+    <button class="button button-clear button-primary" ng-click="modal.hide()">
+      <i class="icon ion-close"></i>
+    </button>
+    <button class="button button-clear button-primary" ng-click="modal.hide()">
+      <i class="icon ion-checkmark"></i>
     </button>
   </ion-header-bar>
   <ion-content>
