remove all predefined addresses bullshit

--- a/client/scripts/orders/views/cart.html
+++ b/client/scripts/orders/views/cart.html
@@ -17,52 +17,13 @@
       <div class="cart-content">
         <div class="titles">
           <i class="ion-map"></i>
-          <h3>{{ 'address' | translate }} ?</h3>
-          <p>{{ 'whereDoYouWantToBeDelivered' | translate }} ?</p>
+          <h3>{{ 'address' | translate }}</h3>
         </div>
-
-        <div class="shipping-address">
-          <ion-list>
-            <label class="item item-radio" ng-class="{'checked' : addressMode.name == 'preset'}">
-              <input type="radio" value="preset" ng-model="addressMode.name" name="addressMode">
-              <div class="item-content">
-                {{ 'myAddress' | translate }}
-              </div>
-              <i class="radio-icon ion-checkmark"></i>
-            </label>
-
-            <label class="item item-radio" ng-class="{'checked' : addressMode.name == 'other'}">
-              <input type="radio" value="other" ng-model="addressMode.name" name="addressMode">
-              <div class="item-content">
-                {{ 'otherAddresses' | translate }}
-              </div>
-              <i class="radio-icon ion-checkmark"></i>
-            </label>
-
-            <div class="item-sub" ng-class="{'is-active' : addressMode.name == 'other'}">
-              <label ng-repeat="predifinedAddress in predifinedAddresses track by $index"
-              class="item-accordion item item-radio"
-              ng-class="
-              {'checked': addressMode.other == $index,
-              'is-active' : addressMode.name == 'other'}">
-              <input type="radio" value="{{$index}}" ng-model="addressMode.other" name="other">
-              <div class="item-content">
-                {{predifinedAddress.details}}
-              </div>
-              <i class="radio-icon ion-location"></i>
-            </label>
-          </div>
-
-        </ion-list>
-      </div>
 
       <div class="display-address">
         <p>{{ 'youWillBeDeliveredAt' | translate }} :
-          <b ng-if="addressMode.name === 'preset'">
+          <b>
             {{ address.street | translate }} <small>{{address.details}}</small>
-          </b>
-          <b ng-if="addressMode.name !== 'preset'">
-            {{ predifinedAddresses[addressMode.other].details }}
           </b>
         </p>
       </div>
