Design address picker modal

--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -1,10 +1,10 @@
 <ion-modal-view>
   <ion-header-bar class='bar-transparent'>
     <button class="button button-clear button-primary" ng-click="modal.hide()">
-      <i class="icon ion-close"></i>
+      <i class="icon ion-android-close"></i>
     </button>
     <button class="button button-clear button-primary" ng-click="modal.hide()">
-      <i class="icon ion-checkmark"></i>
+      <i class="icon ion-android-done"></i>
     </button>
   </ion-header-bar>
   <ion-content>
