--- a/client/styles/components/_address-picker.scss
+++ b/client/styles/components/_address-picker.scss
@@ -1,3 +1,6 @@
 input[type="text"].address-picker__input {
+  height: 50px;
+  width: 100%;
   padding-left: 20px;
+  border-bottom: solid 1px $blue;
 }
