Passe new address on modal validation

--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -3,7 +3,7 @@
     <button class="button button-clear button-primary" ng-click="modal.hide()">
       <i class="icon ion-android-close"></i>
     </button>
-    <button class="button button-clear button-primary" ng-click="modal.hide()">
+    <button class="button button-clear button-primary" ng-click="saveSelectedAddress()">
       <i class="icon ion-android-done"></i>
     </button>
   </ion-header-bar>
