White header on delivery-address modal

--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-transparent'>
+  <ion-header-bar class='bar-transparent address-picker__header'>
     <button class="button button-clear button-primary" ng-click="modal.hide()">
       <i class="icon ion-android-close"></i>
     </button>
