--- a/client/styles/components/_address-picker.scss
+++ b/client/styles/components/_address-picker.scss
@@ -1,3 +1,7 @@
+.address-picker__header {
+  background-color: white;
+}
+
 input[type="text"].address-picker__input {
   height: 50px;
   width: 100%;
