Save address only on done button not cancel

--- a/client/scripts/address/views/address-picker-modal.html
+++ b/client/scripts/address/views/address-picker-modal.html
@@ -8,6 +8,6 @@
     </button>
   </ion-header-bar>
   <ion-content>
-    <ge-address-picker selected-address="deliveryAddress" on-address-select="selectAddress()"></ge-address-picker>
+    <ge-address-picker selected-address="selectedAddress" on-address-select="selectAddress()"></ge-address-picker>
   </ion-content>
 </ion-modal-view>
