--- a/client/styles/pages/_authentication.scss
+++ b/client/styles/pages/_authentication.scss
@@ -115,10 +115,12 @@
 }
 
 .signup-logo-container {
-	position: absolute;
-	width: 80%;
-	top: 10px;
-	left: 10%;
+	width: 100%;
+	height: 30%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 10%;
 }
 
 @media (max-width: 350px) {
